Vertex group locking does not prevent modification by tools like Normalize All as expected #46611

Closed
opened 2015-10-27 01:51:22 +01:00 by Colby Klein · 8 comments

Short description of error
Locked vertex groups get modified by tools, despite not being editable by the user. This breaks user expectations and creates situations where important tools become useless (i.e. If you normalize all when using vertex groups for modifier influences, they get wrecked.)

Locked groups should not be editable, without exception.

Blender Version
Broken: 2.76
Worked: probably never?

Steps to reproduce
- select "normalize me" vertex group in attached .blend.
- go to weight paint mode
- use "normalize all" tool

Results:
expected - Nothing happens, or if there are unlocked groups the normalization only affects them. It does not make sense that the tools would affect groups you cannot edit yourself.
actual - Outline group gets normalized with "normalize me", destroying the weighting in "outline". Outline thickness has changed.

I regularly make groups like this for modifier influences, so effectively I cannot use the normalize all tool if I've set any of this up prior to rigging (which is nearly always).

outline-example.blend

**Short description of error** Locked vertex groups get modified by tools, despite not being editable by the user. This breaks user expectations and creates situations where important tools become useless (i.e. If you normalize all when using vertex groups for modifier influences, they get wrecked.) Locked groups should not be editable, without exception. **Blender Version** Broken: 2.76 Worked: probably never? **Steps to reproduce** - select "normalize me" vertex group in attached .blend. - go to weight paint mode - use "normalize all" tool **Results:** **expected** - Nothing happens, or if there are unlocked groups the normalization only affects them. It does not make sense that the tools would affect groups you cannot edit yourself. **actual** - Outline group gets normalized with "normalize me", destroying the weighting in "outline". Outline thickness has changed. I regularly make groups like this for modifier influences, so effectively I cannot use the normalize all tool if I've set any of this up prior to rigging (which is nearly always). [outline-example.blend](https://archive.blender.org/developer/F247624/outline-example.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ColbyKlein

Added subscriber: @ColbyKlein

Added subscriber: @angavrilov

Added subscriber: @angavrilov

In contrast, auto-normalize feature when painting seems to respect locked groups (especially when you paint to increase value), and wouldn't take into account groups that aren't associated with bones.

In contrast, auto-normalize feature when painting seems to respect locked groups (especially when you paint to increase value), and wouldn't take into account groups that aren't associated with bones.

Added subscribers: @ideasman42, @brecht, @Sergey

Added subscribers: @ideasman42, @brecht, @Sergey

@ideasman42, @brecht: any inputs here? Not really familiar with the weight tools.

@ideasman42, @brecht: any inputs here? Not really familiar with the weight tools.
Campbell Barton self-assigned this 2015-11-03 12:31:06 +01:00

This issue was referenced by 1fb512f4a9

This issue was referenced by 1fb512f4a9cce1065fe40b59689f449617cdc575

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46611
No description provided.