Fix T46611: Vertex group locking fails